--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
     <link rel="stylesheet" type="text/css" href="quiz.css">
 
-    <script src="quiz.js"></script>
-
 </head>
 
 <body id="body" class="responsive">
@@ -36,6 +34,8 @@
     <br>
     <button id="button_login" onclick="adduser()">Login</button>
     </center>
+    
+    <script src="main.js"></script>
 </body>
 
 </html>
