--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <br>
     <br>
-    <button id="button_login" onclick="adduser()">Login</button>
+    <button id="button_login" onclick="addUser()">Login</button>
     </center>
     
     <script src="main.js"></script>
