--- a/quiz.html
+++ b/quiz.html
@@ -19,9 +19,10 @@
     <br>
     <h4 id="player2_name"></h4> <span id="player2_score"></span>
 
+
     <div class="container">
         <center>
-            <h2 style="color: white;">The Math Quiz Game!</h2>
+            <h2 style="color: white; margin-top: 0px;">The Math Quiz Game!</h2>
             <h3 id="player_question"></h3>
             <h3 id="player_answer"></h3>
             <div id="output"></div>
